--- a/password.html
+++ b/password.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>用户中心 - 手机网页版 </title>
+    <title>充值记录 - 手机网页版 </title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -15,25 +15,34 @@
 <div class="page-group-form page-current content">
     <header class="bar header-nav">
         <a class="button header-login pull-left logo" href="/"><img src="./image/logo.png" alt="虎游娱乐城"></a>
-        <a class="header-login pull-right " href="user.html" >欢迎您，123456 </a>
-        <!--<a class="header-login pull-right " href="login.html" >注册|登录 </a>-->
+        <a class="header-login pull-right " href="login.html" > 注册|登录 </a>
         <h1 class="title"></h1>
     </header>
     <section class="native-scroll scroll-top">
-        <section class="user_cash">
-            <p>余额：0.00<span></span></p>
-        </section>
-        <section class="user_list">
-            <a href="user_detail.html" class="v4-management">个人资料</a>
-            <a href="password.html" class="v4-management">修改登录密码</a>
-            <a href="draw_card.html" class="v4-management">取款银行卡</a>
-            <a href="recharge_detail.html" class="v4-management">存款</a>
-            <a href="transfer.html" class="v4-management">平台转账</a>
-            <a href="withdrawal.html" class="v4-management">提款</a>
-        </section>
-        <section class="form-btn-wrap mb8px">
-            <input type="submit" class="form-btn form-btn-red" id="submit-next" data-lock="false" value="退出">
-        </section>
+        <form action="" method="post" id="login_form" >
+            <section class="form-input-group2">
+                <div class="form-input-box2 pwdTip">
+                    <span class="form-input-title ">原密码</span>
+                    <input type="text" name="end_time"  autocomplete="off"  placeholder="请输入原始密码">
+                </div>
+            </section>
+            <section class="form-input-group2">
+                <div class="form-input-box2 pwdTip">
+                    <span class="form-input-title ">新密码</span>
+                    <input type="text" name="end_time"  autocomplete="off"  placeholder="请输入新密码">
+                </div>
+            </section>
+            <section class="form-input-group2">
+                <div class="form-input-box2 pwdTip">
+                    <span class="form-input-title ">确认密码</span>
+                    <input type="text" name="end_time"  autocomplete="off"  placeholder="请确认密码">
+                </div>
+            </section>
+            <section class="form-btn-wrap mb3px">
+                <input type="submit" class="form-btn form-btn-blue fl mb3px" id="submit-next" data-lock="false" value="修改">
+                <input type="reset" class="form-btn wap2-btn-red fr mb2px"   value="取消">
+            </section>
+        </form>
     </section>
     <footer class="bar bar-tab page-fixed footer-button">
         <a class="tab-item " href="/">
