--- a/recharge_detail.html
+++ b/recharge_detail.html
@@ -22,24 +22,36 @@
         <form action="" method="post" id="login_form" >
             <section class="form-input-group2 mt1">
                 <div class="form-input-box2">
-                    <span class="form-input-title">提款方式</span>
+                    <span class="form-input-title">存款方式</span>
                     <select>
                         <option value="0">网银支付</option>
                         <option value="1">支付转账</option>
                         <option value="2">微信转账</option>
+                        <option value="3">第三方支付</option>
+                    </select>
+                </div>
+            </section>
+            <section class="form-input-group2">
+                <div class="form-input-box2">
+                    <span class="form-input-title">申请优惠</span>
+                    <select>
+                        <option value="0">暂不申请</option>
+                        <option value="1">首存优惠</option>
+                        <option value="1">vip优惠</option>
+                        <option value="2">单笔优惠</option>
                     </select>
                 </div>
             </section>
             <section class="form-input-group2">
                 <div class="form-input-box2 pwdTip">
-                    <span class="form-input-title ">账号信息</span>
-                    <input type="text" name="end_time"  autocomplete="off"  placeholder="微信，支付请备注姓名">
+                    <span class="form-input-title ">金额</span>
+                    <input type="text" name="end_time"  autocomplete="off"  placeholder="填写充值金额">
                 </div>
             </section>
             <section class="form-input-group2">
                 <div class="form-input-box2 pwdTip">
-                    <span class="form-input-title ">金额</span>
-                    <input type="text" name="end_time"  autocomplete="off"  placeholder="填写提款金额">
+                    <span class="form-input-title ">备注</span>
+                    <input type="text" name="end_time"  autocomplete="off"  placeholder="微信，支付请备注姓名">
                 </div>
             </section>
             <section class="form-btn-wrap mb3px">
