--- a/report.html
+++ b/report.html
@@ -25,9 +25,9 @@
         </section>
         <section class="report_list mb3px">
 
-            <a href="" class="v4-management">存款记录</a>
-            <a href="" class="v4-management">提款记录</a>
-            <a href="" class="v4-management">优惠记录</a>
+            <a href="report_recharge.html" class="v4-management">存款记录</a>
+            <a href="report_withdraw.html" class="v4-management">提款记录</a>
+            <a href="report_bonus.html" class="v4-management">优惠记录</a>
         </section>
     </section>
     <footer class="bar bar-tab page-fixed footer-button">
