--- a/card_detail.html
+++ b/card_detail.html
@@ -22,24 +22,42 @@
         <form action="" method="post" id="login_form" >
             <section class="form-input-group2 mt1">
                 <div class="form-input-box2">
-                    <span class="form-input-title">提款方式</span>
+                    <span class="form-input-title">开户银行</span>
                     <select>
-                        <option value="0">网银支付</option>
-                        <option value="1">支付转账</option>
-                        <option value="2">微信转账</option>
+                        <option value="0"> 请选择银行</option>
+                        <option value="1"> 工商银行</option>
+                        <option value="2"> 建设银行</option>
+                        <option value="3"> 农业银行</option>
+                        <option value="4"> 中国银行</option>
+                        <option value="5"> 招商银行</option>
                     </select>
                 </div>
             </section>
             <section class="form-input-group2">
                 <div class="form-input-box2 pwdTip">
-                    <span class="form-input-title ">账号信息</span>
-                    <input type="text" name="end_time"  autocomplete="off"  placeholder="微信，支付请备注姓名">
+                    <span class="form-input-title ">姓名</span>
+                    <input type="text" name="end_time"  autocomplete="off"  placeholder="填写真实姓名">
                 </div>
             </section>
             <section class="form-input-group2">
                 <div class="form-input-box2 pwdTip">
-                    <span class="form-input-title ">金额</span>
-                    <input type="text" name="end_time"  autocomplete="off"  placeholder="填写提款金额">
+                    <span class="form-input-title ">卡号</span>
+                    <input type="text" name="end_time"  autocomplete="off"  placeholder="请输入银行卡号">
+                </div>
+            </section>
+            <section class="form-input-group2">
+                <div class="form-input-box2 pwdTip">
+                    <span class="form-input-title ">开户地址</span>
+                    <input type="text" name="end_time"  autocomplete="off"  placeholder="请填写开户行地址">
+                </div>
+            </section>
+            <section class="form-input-group2">
+                <div class="form-input-box2 pwdTip">
+                    <span class="form-input-title ">状态</span>
+                    <select>
+                        <option value="1">启用</option>
+                        <option value="2">禁用</option>
+                    </select>
                 </div>
             </section>
             <section class="form-btn-wrap mb3px">
