--- a/report_withdraw.html
+++ b/report_withdraw.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>充值记录 - 手机网页版 </title>
+    <title>提款记录 - 手机网页版 </title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -22,31 +22,57 @@
         <form action="" method="post" id="login_form" >
             <section class="form-input-group2 mt1">
                 <div class="form-input-box2">
-                    <span class="form-input-title">提款方式</span>
-                    <select>
-                        <option value="0">网银支付</option>
-                        <option value="1">支付转账</option>
-                        <option value="2">微信转账</option>
-                    </select>
+                    <span class="form-input-title">开始时间</span>
+                    <input type="text" name="start_time" autocomplete="off" id="start_time" placeholder="开始时间" value="">
                 </div>
             </section>
             <section class="form-input-group2">
                 <div class="form-input-box2 pwdTip">
-                    <span class="form-input-title ">账号信息</span>
-                    <input type="text" name="end_time"  autocomplete="off"  placeholder="微信，支付请备注姓名">
+                    <span class="form-input-title ">结束时间</span>
+                    <input type="text" name="end_time"  autocomplete="off" id="end_time" placeholder="结束时间">
                 </div>
             </section>
-            <section class="form-input-group2">
-                <div class="form-input-box2 pwdTip">
-                    <span class="form-input-title ">金额</span>
-                    <input type="text" name="end_time"  autocomplete="off"  placeholder="填写提款金额">
-                </div>
-            </section>
-            <section class="form-btn-wrap mb3px">
-                <input type="submit" class="form-btn form-btn-blue fl mb3px" id="submit-next" data-lock="false" value="提交">
-                <input type="reset" class="form-btn wap2-btn-red fr mb2px"   value="取消">
+            <section class="form-btn-wrap2 mb3px">
+                <input type="submit" class="form-btn2 form-btn-blue fl" id="submit-next" data-lock="false" value="搜索">
+                <a  class="form-btn2 form-btn-red fr"  href="report.html" >返回</a>
             </section>
         </form>
+        <div class="row targer-text">
+            <div class="col-100">
+                <div class="table-responsive mb3px">
+                    <table class="table-bordered-rep">
+                        <thead>
+                        <tr>
+                            <th>日期</th>
+                            <th>类型</th>
+                            <th>金额</th>
+                            <th>状态</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>2017-10-12</td>
+                            <td>网银</td>
+                            <td>123.45</td>
+                            <td>成功</td>
+                        </tr>
+                        <tr>
+                            <td>2017-10-12</td>
+                            <td>微信</td>
+                            <td>123.45</td>
+                            <td>成功</td>
+                        </tr>
+                        <tr>
+                            <td>2017-10-12</td>
+                            <td>三方支付</td>
+                            <td>123.45</td>
+                            <td>成功</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
     </section>
     <footer class="bar bar-tab page-fixed footer-button">
         <a class="tab-item " href="/">
