--- a/user_detail.html
+++ b/user_detail.html
@@ -20,30 +20,47 @@
     </header>
     <section class="native-scroll scroll-top">
         <form action="" method="post" id="login_form" >
-            <section class="form-input-group2 mt1">
-                <div class="form-input-box2">
-                    <span class="form-input-title">提款方式</span>
+            <section class="form-input-group2">
+                <div class="form-input-box2 pwdTip">
+                    <span class="form-input-title ">姓名</span>
+                    <input type="text" name="end_time"  autocomplete="off"  placeholder="填写真实姓名" value="张三">
+                </div>
+            </section>
+            <section class="form-input-group2">
+                <div class="form-input-box2 pwdTip">
+                    <span class="form-input-title ">性别</span>
                     <select>
-                        <option value="0">网银支付</option>
-                        <option value="1">支付转账</option>
-                        <option value="2">微信转账</option>
+                        <option value="1">男</option>
+                        <option value="2">女</option>
                     </select>
                 </div>
             </section>
             <section class="form-input-group2">
                 <div class="form-input-box2 pwdTip">
-                    <span class="form-input-title ">账号信息</span>
-                    <input type="text" name="end_time"  autocomplete="off"  placeholder="微信，支付请备注姓名">
+                    <span class="form-input-title ">生日</span>
+                    <input type="text" name="end_time"  autocomplete="off"  placeholder="生日" value="1988年8月8日">
                 </div>
             </section>
             <section class="form-input-group2">
                 <div class="form-input-box2 pwdTip">
-                    <span class="form-input-title ">金额</span>
-                    <input type="text" name="end_time"  autocomplete="off"  placeholder="填写提款金额">
+                    <span class="form-input-title ">电话</span>
+                    <input type="text" name="end_time"  autocomplete="off"  placeholder="电话号码" value="13786341232">
+                </div>
+            </section>
+            <section class="form-input-group2">
+                <div class="form-input-box2 pwdTip">
+                    <span class="form-input-title ">QQ</span>
+                    <input type="text" name="end_time"  autocomplete="off"  placeholder="请填写QQ号码" value="475987652">
+                </div>
+            </section>
+            <section class="form-input-group2">
+                <div class="form-input-box2 pwdTip">
+                    <span class="form-input-title ">邀请码</span>
+                    <input type="text" name="end_time"  autocomplete="off"  placeholder="请填写邀请码" value="475987">
                 </div>
             </section>
             <section class="form-btn-wrap mb3px">
-                <input type="submit" class="form-btn form-btn-blue fl mb3px" id="submit-next" data-lock="false" value="提交">
+                <input type="submit" class="form-btn form-btn-blue fl mb3px" id="submit-next" data-lock="false" value="保持">
                 <input type="reset" class="form-btn wap2-btn-red fr mb2px"   value="取消">
             </section>
         </form>
