--- a/slot.html
+++ b/slot.html
@@ -41,6 +41,15 @@
                 <div class="col-4-bt"><a href="slot.html" class="button  btn-bandit">DT老虎机</a></div>
             </div>
         </div>
+        <div class="game-search row">
+            <section class="wap2-input-group2">
+                <div class="wap2-input-box">
+                    <span class="wap2-input-icon wap2-input-iconcode"></span>
+                    <input type="number" name="code" id="code" placeholder="请输入名字" value="">
+                    <input type="button" class="wap2-btn-code2"   value="搜索">
+                </div>
+            </section>
+        </div>
         <div class="content-padded gamepic">
             <div class="row targer-text">
                 <div class="col-33"><a href="slot.html"><img src="./image/targer_01.png"><span>招财进宝</span></a></div>
@@ -54,13 +63,22 @@
                 <div class="col-33"><a href="slot.html"><img src="./image/targer_03.png"><span>暴力摩托</span></a></div>
             </div>
         </div>
+        <div class='page-group-box'>
+            <a href="javascript:;" class="page-box">上一页</a>
+            <a href="javascript:;" class="cur">1</a>
+            <a href="javascript:;">2</a>
+            <a href="javascript:;">3</a>
+            <a href="javascript:;">4</a>
+            <a href="javascript:;" class="next-page">下一页</a>
+        </div>
+        <div class="mb8px"></div>
     </section>
     <footer class="bar bar-tab page-fixed footer-button">
         <a class="tab-item " href="/">
             <span class="icon icon-home"></span>
             <span class="tab-label">首页</span>
         </a>
-        <a class="tab-item" href="javascript:;">
+        <a class="tab-item" href="report.html">
             <span class="icon icon-browser"></span>
             <span class="tab-label">报表</span>
         </a>
@@ -68,7 +86,7 @@
             <span class="icon icon-message"></span>
             <span class="tab-label">客服</span>
         </a>
-        <a id="goaboutme" class="tab-item" href="javascript:;">
+        <a id="goaboutme" class="tab-item" href="user.html">
             <span class="icon icon-me"></span>
             <span class="tab-label">我的</span>
         </a>
